2009-11-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Pass libdir to CMake based subprojects, fixes bug #1194, installation
	on 64-bit systems (https://bugs.openvas.org/1194).

	* Makefile: Pass given libdir to cmake.

2009-11-23  Chandrashekhar B <bchandra@secpod.com>

	* nasl/nasl_socket.c (nasl_open_privileged_socket): Fixed a
	possible buffer overflow.

2009-11-23  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Applied rest of patch provided by Stephan Kleine
	(http://lists.wald.intevation.org/pipermail/openvas-devel/2009-November/001907.html)
	to fix compilation on openSUSE 11.2.

	* nasl/CMakeList.txt: Moved linker flags to target_link_library command
	of cmake.

2009-11-23  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Applied part of patch provided by Stephan Kleine
	(http://lists.wald.intevation.org/pipermail/openvas-devel/2009-November/001907.html)
	to fix compilation on openSUSE 11.2.

	* base/CMakeList.txt: Added glib linker flags, patch provided by
	Stephan Kleine.

2009-11-23  Michael Wiegand <michael.wiegand@intevation.de>

	Post-release version bump.

	* VERSION: Set to 3.0.0.beta8.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-11-23  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-libraries 3.0.0-beta7 release.

	* CHANGES: Updated.

	* VERSION: Set to 3.0.0.beta7.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-11-23  Chandrashekhar B <bchandra@secpod.com>

	* misc/pcap.c (getipv6routes): Changed the message not to report
	as error.

	* hg/hg_utils.c (hg_get_name_from_ip): Bug fixes:
	- Possible buffer overflow in memcpy()
	- Seperate v4 and v6 logic so that it resolves to pure IPv4 address
	and not a v6 mapped v4 address.
	- Included ':' in the hostname structuring code, ':' is a valid char
	in v6 address and also trim the resuling hostname.

2009-11-20  Chandrashekhar B <bchandra@secpod.com>
