@@ -1,5 +1,9 @@
 2009-11-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>
 
+	* misc/network.c: Major reformatting, docs and comments.
+
+2009-11-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>
+
 	Pass libdir to CMake based subprojects, fixes bug #1194, installation
 	on 64-bit systems (https://bugs.openvas.org/1194).
 
